--- a/Win/index.html
+++ b/Win/index.html
@@ -12,13 +12,13 @@
     <main id="main">
         <div id="barra-menu">
             <div id="btn-iniciar" class="btn">
-                <img src="../../Assets/Win11Logo.png" alt="">
+                <img src="./Assets/Win11Logo.png" alt="">
             </div>
             <div id="btn-Chrome" class="btn">
-                <img src="../../Assets/chrome.png">
+                <img src="./Assets/chrome.png">
             </div>
             <div id="btn-AddStock" class="btn">
-                <img src="../../Assets/IconAdd.png">
+                <img src="./Assets/IconAdd.png">
             </div>
         </div>
 
